<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mjgrusni.program1.FacultyActivity">


    <ImageView
        android:layout_width="85dp"
        android:layout_height="100dp"
        android:src="@drawable/gpcorser"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corser_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="Assistant Professor of Computer Science &amp; Information Systems"/>
    <ImageView
        android:layout_width="85dp"
        android:layout_height="100dp"
        android:src="@drawable/bidgoli"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bidgoli_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="Associate Professor of Computer Science &amp; Information Systems"/>
    <ImageView
        android:layout_width="85dp"
        android:layout_height="100dp"
        android:src="@drawable/cho"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cho_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="Associate Professor of Computer Science &amp; Information Systems"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="onClickBack"
        android:text="Back"/>

</LinearLayout>
